Repositorio e alterações no Banco de Dados

--- a/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
+++ b/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
@@ -16,5 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference> 
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.9" />
+    </PackageReference> 
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
   </ItemGroup>
-</Project>
+     </Project>
