--- a/SmartSchool.WebAPI/Properties/launchSettings.json
+++ b/SmartSchool.WebAPI/Properties/launchSettings.json
@@ -4,25 +4,20 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29573",
-      "sslPort": 44342
+      "applicationUrl": "http://localhost:29573"      
     }
   },
   "profiles": {
     "SmartSchool.WebAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5128",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "commandName": "IISExpress",     
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
